--- a/views/index.erb
+++ b/views/index.erb
@@ -1,24 +1,24 @@
 <html>
 <head>
-	<title>Hangman[Sinatra]</title>
-	<link rel="stylesheet" href="style.css" >
-	<link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
+  <title>Sinatra Hangman Game</title>
+  <link rel="stylesheet" href="style/style.css" >
+  <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
-	<h1>The Hangman Game</h1>
-	<p class="info">powered by Sinatra</p>
-	<p class="guessing"><%= guessing %></p>
-	<p>Guessing: <%= lives %></p>
-	<p>Chosen letters: <%= chosen_letters %></p>
-	<div>
-		<form>
-			<label for="letter">Choose a letter:</label>
-			<input type="text" name="letter" maxlength="1" oninput="this.value=this.value.replace(/[^a-zA-Z)/g, '');" <%= input_status %>/>
-			<input type="submit" value="Go!" />
-		</form>
-	</div>
-	<p><%= message %></p>
-	<p><a href="/?restart=true">New Game</a></p>
+  <p class="info">POWERED BY SINATRA</p>
+  <h1>Hangman game</h1>
+  <p class="guessing"><%= guessing %></p>
+  <p>Guessings: <%= lives %></p>
+  <p>Chosen letters: <%= chosen_letters %></p>
+  <div>
+    <form>
+      <label for="letter">Choose a letter:</label>
+      <input type='text' name='letter' maxlength="1" oninput="this.value=this.value.replace(/[^a-zA-Z]/g,'');" <%= input_status %>/>
+      <input type='submit' value='Go!' />
+    </form>
+  </div>
+  <p><%= message %></p>
+  <p><a href="/?restart=true">Start a new game</a></p>
 </body>
 </html>
